Add API functions to initialize Haveno account
Co-authored-by: woodser@protonmail.com